--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React Reddit Viewer"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://unpkg.com/picnic">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
-    <title>Reddit Viewer</title>
+    <title>React Reddit Viewer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
